--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+  <span> sss1</span>
     <p><span style="color:#F00">hi soso</span>       </p>
     <input type="text" name="name" value="" style="width:300px">
     <button>click</button>
